# .devHacks-Project

./: LICENSE  README.md  backend.ps1  backend.sh  bundle.ps1  bundle.sh  frontend.ps1  frontend.sh
backend/: CMakeLists.txt
backend/public/: index.html
backend/public/assets/: index-Cbm-FrsP.css
backend/src/: main.cpp
backend/src/simulator/: metrics.cpp  metrics.hpp  model.hpp  scheduler.cpp  scheduler.hpp
backend/src/simulator/algorithms/: algohelper.hpp  fcfs.cpp  rr.cpp  runtime.hpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: api.ts  app.tsx  main.tsx  types.ts
frontend/src/components/: ControlPanel.tsx  GanttSvg.tsx  MetricsCards.tsx  QueuePreview.tsx
